Fix README and normalize line endings throughout project.

--- a/Isaac64.csproj
+++ b/Isaac64.csproj
@@ -7,4 +7,12 @@
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="J:\coding\github\isaac64\Isaac64cs\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="J:\coding\github\isaac64\Isaac64cs\.editorconfig" />
+  </ItemGroup>
+
 </Project>
