--- a/Isaac64cs/Isaac64.csproj
+++ b/Isaac64cs/Isaac64.csproj
@@ -2,9 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+      <ProductName>Isaac64</ProductName>
+      <Version>1.0.0</Version>
+      <Authors>Robert C. Horvath, III</Authors>
+      <Company>Nebulae Foundation, LLC</Company>
+      <Description>Fast, deterministic, standards-compliant ISAAC64 RNG implementation in C# with subword extraction, rejection sampling, and IEEE754 double support.</Description>
+      <PackageProjectUrl>https://github.com/nebulaeonline/Isaac64cs</PackageProjectUrl>
+      <RepositoryUrl>https://github.com/nebulaeonline/Isaac64cs</RepositoryUrl>
+      <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
+      <PackageTags>RNG;ISAAC64;random;entropy;deterministic;simulation</PackageTags>
+      <IncludeSymbols>true</IncludeSymbols>
+      <IncludeSource>true</IncludeSource>
+      <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <Title>Isaac64</Title>
+    <Copyright>© 2023-2025 Nebulae Foundation, LLC</Copyright>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryType>git</RepositoryType>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="J:\coding\github\isaac64\Isaac64cs\.editorconfig" />
   </ItemGroup>
 
